<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_button">Favorite button</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="favourites">Favourites</string>
    <string name="no_internet">No Internet</string>
    <string name="retry">Retry</string>
    <string name="search_news">Search news...</string>
    <string name="news_image">News image</string>
    <string name="source">Source</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
</resources>